--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="permission_denied">Permission Denied</string>
     <string name="permissions_denied_message">You need to allow "location access" before you can use the app. </string>
     <string name="getting_your_location">Getting your location</string>
+    <string name="take_a_picture">Take a picture</string>
+    <string name="use_photo">Use photo</string>
 </resources>
