--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,9 @@
     <string name="getting_your_location">Getting your location</string>
     <string name="take_a_picture">Take a picture</string>
     <string name="use_photo">Use photo</string>
+
+
+    <!-- MY PLACES -->
+    <string name="my_places">My Places</string>
+    <string name="no_places_defined">No places defined</string>
 </resources>
