added rxbinding to recycler view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <!-- Create Place -->
     <string name="name">Name</string>
     <string name="done">Done</string>
+    <string name="indefined">Indefined</string>
 
     <!--Dialogs-->
     <string name="alert">Alert</string>
