--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -62,4 +62,5 @@
     <string name="enter_place_name">Пожалуйста введите название места</string>
     <string name="you_sure">Вы уверены?</string>
     <string name="you_lose_this_place">Вы потеряете это место</string>
+    <string name="deleted_success">Место было успешно удалено</string>
 </resources>
