--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <!--facebook-->
     <string name="facebook_app_id">1841994936099181</string>
     <string name="fb_login_protocol_scheme">fb1841994936099181</string>
+    <string name="place_name">Place name</string>
 </resources>
