--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="description_info">Info</string>
     <string name="request_permission">This sample needs camera permission.</string>
     <string name="request_permission_sd">This sample needs sd card permission.</string>
+    <string name="upload_profile_photo">Please Grant Permissions to upload profile photo.</string>
     <string name="camera_error">This device doesn\'t support Camera2 API.</string>
     <string name="intro_message">Introductory message</string>
 
@@ -32,6 +33,8 @@
     <string name="building_path">Building path</string>
     <string name="take_a_picture">Take a picture</string>
     <string name="use_photo">Use photo</string>
+    <string name="ENABLE">ENABLE</string>
+    <string name="Failed">Failed</string>
 
     <string name="BackDropBottomSheetBehavior">diploma.edu.zp.guide_my_own.lib.BackdropBottomSheetBehavior</string>
     <string name="BottomSheetBehaviorGoogleMapsLike">diploma.edu.zp.guide_my_own.lib.BottomSheetBehaviorGoogleMapsLike</string>
@@ -70,6 +73,7 @@
     <string name="you_sure">Are you sure?</string>
     <string name="you_lose_this_place">You\'ll lose this place</string>
     <string name="deleted_success">Place was deleted successfully</string>
+    <string name="you_have_successfully_registered">You have successfully registered</string>
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
